feat: update stats info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,23 +13,23 @@ import {SITE_TITLE} from "../consts";
 					<p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
 					<button class="btn btn-primary text-2xl font-medium">Register</button>
 
-					<div class="stats shadow mt-8 grid-flow-row md:grid-flow-col">
+					<div class="stats shadow mt-8 bg-base-200 grid-flow-row md:grid-flow-col">
 
 						<div class="stat">
 							<div class="stat-title">Tracks</div>
-							<div class="stat-value">3</div>
+							<div class="stat-value">1</div>
 						</div>
 						<div class="stat">
 							<div class="stat-title">Speakers</div>
-							<div class="stat-value">40</div>
+							<div class="stat-value">8</div>
 						</div>
 						<div class="stat">
 							<div class="stat-title">Attendees</div>
-							<div class="stat-value">700</div>
+							<div class="stat-value">100</div>
 						</div>
 						<div class="stat">
 							<div class="stat-title">Sponsors</div>
-							<div class="stat-value">20</div>
+							<div class="stat-value">5</div>
 						</div>
 
 					</div>
@@ -38,3 +38,5 @@ import {SITE_TITLE} from "../consts";
 		</div>
 	</main>
 </Layout>
+
+
