--- a/src/pages/cfp.astro
+++ b/src/pages/cfp.astro
@@ -58,23 +58,19 @@ const schema = {
         </HeaderHero>
 
         <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
-            <div class="stats shadow mt-8 mb-4  grid-flow-row md:grid-flow-col">
+            <div class="stats shadow mt-8 mb-4 bg-base-200 grid-flow-row md:grid-flow-col">
                 <div class="stat">
-                    <div class="stat-title">Tracks</div>
-                    <div class="stat-value">3</div>
-                </div>
-                <div class="stat">
-                    <div class="stat-title">Conferences</div>
-                    <div class="stat-value">18</div>
-                </div>
-                <div class="stat">
-                    <div class="stat-title">Lightining talks</div>
-                    <div class="stat-value">12</div>
-                </div>
-                <div class="stat">
-                    <div class="stat-title">Workshops</div>
-                    <div class="stat-value">4</div>
-                </div>
+							<div class="stat-title">Tracks</div>
+							<div class="stat-value">1</div>
+						</div>
+						<div class="stat">
+							<div class="stat-title">Talks</div>
+							<div class="stat-value">8</div>
+						</div>
+						<div class="stat">
+							<div class="stat-title">Talk duration</div>
+							<div class="stat-value">30 minutes</div>
+						</div>
             </div>
 
             <h2 class="text-4xl font-bold mt-20 mb-12">Submission timeline</h2>
