feat: update Venue description

--- a/src/pages/venue.astro
+++ b/src/pages/venue.astro
@@ -33,7 +33,7 @@ const schema = {
     <main>
         <HeaderHero>
             <span slot="title">Venue</span>
-            <span slot="description">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</span>
+            <span slot="description">Join us in Nantes, France - a vibrant city known for its rich history and tech community. Our conference venue provides an ideal setting for learning and networking in the heart of Western France.</span>
         </HeaderHero>
     </main>
 </Layout>
