--- a/src/components/Drawer.astro
+++ b/src/components/Drawer.astro
@@ -6,9 +6,11 @@ import Footer from "./Footer.astro";
 
 <div class="drawer">
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
-    <div class="drawer-content">
+    <div class="drawer-content flex flex-col min-h-screen">
         <Header />
-        <slot />
+        <div class="flex-1">
+            <slot />
+        </div>
         <Footer />
     </div>
     <div class="drawer-side">
