--- a/src/components/HeaderHero.astro
+++ b/src/components/HeaderHero.astro
@@ -1,7 +1,7 @@
 <div class="hero" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
     <div class="hero-overlay bg-opacity-60"></div>
     <div class="hero-content text-center text-neutral-content">
-        <div class="max-w-md">
+        <div class="max-w-screen-lg">
             <h1 class="mb-5 text-5xl font-bold">
                 <slot name="title" />
             </h1>
