feat: home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,18 +7,17 @@ import {SITE_TITLE} from "../consts";
 	<main>
 		<div class="hero min-h-screen">
 			<div class="hero-content text-center">
-				<div class="max-w-ld flex flex-col items-center">
-					<h1 class="text-5xl font-bold">EventEdge</h1>
-					<h2 class="text-3xl font-bold">The largest XX Conference in the XX</h2>
-					<p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-					<button class="btn btn-primary text-2xl font-medium">Register</button>
+				<div class="max-w-ld flex items-end">
+					<div class="flex flex-col flex-1 items-center">
+						<h1 class="text-5xl font-bold flex gap-4 uppercase items-start">
+							<span>NG Baguette</span>
+							<span>Conf 2025</span>
+						</h1>
+					<h2 class="text-3xl font-bold mt-4">Your new French cooked Angular conference!</h2>
+					<p class="py-6">Join us for a unique Angular conference experience in France! Discover the latest in Angular development, network with experts and fellow developers.</p>
+					<button class="btn btn-primary btn-outline text-2xl font-medium">Get your ticket</button>
 
 					<div class="stats shadow mt-8 bg-base-200 grid-flow-row md:grid-flow-col">
-
-						<div class="stat">
-							<div class="stat-title">Tracks</div>
-							<div class="stat-value">1</div>
-						</div>
 						<div class="stat">
 							<div class="stat-title">Speakers</div>
 							<div class="stat-value">8</div>
@@ -33,6 +32,14 @@ import {SITE_TITLE} from "../consts";
 						</div>
 
 					</div>
+					</div>
+					<div class="flex-1">
+						<img class="w-full" src="/ng-baguette-logo.svg" alt="EventEdge">
+					</div>
+					
+					</div>
+					
+					
 				</div>
 			</div>
 		</div>
