--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,14 +2,15 @@
 import {NAVIGATION_LINKS, SITE_TITLE, CFP_LINK} from "../consts";
 ---
 <header class="sticky top-0 z-10">
-    <div class="navbar bg-base-100">
+    <div class="navbar bg-base-100 px-6">
         <div class="flex-none">
             <label for="my-drawer" class="btn btn-square btn-ghost md:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
             </label>
         </div>
-        <div class="flex-1">
-            <a class="btn btn-ghost text-xl" href="/">{SITE_TITLE}</a>
+        <div class="flex-1 items-center">
+            <img src="/ng-baguette-light-logo.svg" class="w-16 h-16" alt="EventEdge">
+            <a class="btn btn-ghost text-2xl" href="/">{SITE_TITLE}</a>
         </div>
         <div class="flex-none">
             <nav aria-label="main navigation">
