feat: cfp banner

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,8 @@ import {SITE_TITLE} from "../consts";
 	<main>
 		<div class="hero min-h-screen">
 			<div class="hero-content text-center">
-				<div class="max-w-ld flex items-end">
+				<div class="max-w-ld flex items-center">
+					
 					<div class="flex flex-col flex-1 items-center">
 						<h1 class="text-5xl font-bold flex gap-4 uppercase items-start">
 							<span>NG Baguette</span>
@@ -32,6 +33,23 @@ import {SITE_TITLE} from "../consts";
 						</div>
 
 					</div>
+					<div role="alert" class="alert mt-8">
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    fill="none"
+    viewBox="0 0 24 24"
+    class="stroke-info h-6 w-6 shrink-0">
+    <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      stroke-width="2"
+      d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+  </svg>
+  <span>Call for papers open until 31st January</span>
+  <div>
+    <a class="btn btn-sm btn-primary">Submit</a>
+  </div>
+</div>
 					</div>
 					<div class="flex-1">
 						<img class="w-full" src="/ng-baguette-logo.svg" alt="EventEdge">
