--- a/src/pages/agenda.astro
+++ b/src/pages/agenda.astro
@@ -4,7 +4,18 @@ import Layout from "../layouts/Layout.astro";
 import HeaderHero from "../components/HeaderHero.astro";
 import { getCollection } from "astro:content";
 
-const tracks = await getCollection("track");
+const tracks = (await getCollection("track")).sort(
+  (a, b) =>
+    new Date(a.data.startDate).getTime() - new Date(b.data.startDate).getTime()
+);
+
+const displayAsHour = (hour: string) => {
+  return (
+    (hour.startsWith("0") ? hour.slice(1, 2) : hour.slice(0, 2)) +
+    ":" +
+    hour.slice(-2)
+  );
+};
 
 const schema = {
   "@context": "https://schema.org",
@@ -59,11 +70,17 @@ const schema = {
   <main>
     <HeaderHero>
       <span slot="title">Agenda</span>
-      <span slot="description"
-        >Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-        excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a
-        id nisi.</span
-      >
+      <span slot="description">
+        Join us for an exciting and informative Angular technical event where
+        industry experts and enthusiasts come together to share knowledge,
+        network, and explore the latest trends and advancements in Angular
+        development. Whether you're a seasoned developer or just starting out,
+        this event offers something for everyone. Dive into a series of engaging
+        sessions, hands-on workshops, and insightful panel discussions designed
+        to enhance your skills and inspire your next project. Don't miss this
+        opportunity to connect with the Angular community and take your
+        development expertise to the next level.
+      </span>
     </HeaderHero>
     <section class="max-w-screen-lg m-auto px-8">
       <div class="schedule" aria-labelledby="schedule-heading">
@@ -72,28 +89,14 @@ const schema = {
           aria-hidden="true"
           style="grid-column: track-1; grid-row: tracks;">Track 1</span
         >
-        <span
-          class="track-slot"
-          aria-hidden="true"
-          style="grid-column: track-2; grid-row: tracks;">Track 2</span
-        >
-        <span
-          class="track-slot"
-          aria-hidden="true"
-          style="grid-column: track-3; grid-row: tracks;">Track 3</span
-        >
-        <span
-          class="track-slot"
-          aria-hidden="true"
-          style="grid-column: track-4; grid-row: tracks;">Track 4</span
-        >
 
         {
-          tracks.map((track) => (
+          tracks.map((track, index) => (
             <div
               class={
-                "session session-1 " +
-                track.data.rooms.map((room) => "track-" + room).join(" ")
+                "session session-" +
+                index +
+                track.data.rooms.map((room) => " track-" + room).join(" ")
               }
               style={
                 "grid-column: " +
@@ -108,12 +111,20 @@ const schema = {
               <h3 class="session-title">
                 <a href={`track/${track.slug}`}>{track.data.name}</a>
               </h3>
-              <span class="session-time">8:00 - 9:00</span>
+              <span class="session-time">
+                {displayAsHour(track.data.startDate)} -{" "}
+                {displayAsHour(track.data.endDate)}
+              </span>
               <span class="session-track">
                 Track : {track.data.rooms.join(" & ")}
               </span>
               <span class="session-presenter">
-                <a href={`speaker/${track.data.presenterSlug}`}>
+                <a
+                  href={
+                    track.data.presenterSlug &&
+                    `speaker/${track.data.presenterSlug}`
+                  }
+                >
                   {track.data.presenter}
                 </a>
               </span>
@@ -122,25 +133,34 @@ const schema = {
         }
 
         <div
-          class="session session-7 track-all"
-          style="grid-column: track-1-start / track-4-end; grid-row: time-1000 / time-1030;"
+          class="session break"
+          style="grid-column: track-1-start / track-1-end; grid-row: time-1000 / time-1100;"
+        >
+          <h3 class="session-title">Welcome</h3>
+        </div>
+        <div
+          class="session break"
+          style="grid-column: track-1-start / track-1-end; grid-row: time-1215 / time-1320;"
+        >
+          <h3 class="session-title">Lunch break!</h3>
+        </div>
+        <div
+          class="session break"
+          style="grid-column: track-1-start / track-1-end; grid-row: time-1425 / time-1500;"
         >
           <h3 class="session-title">Take a break!</h3>
         </div>
         <div
-          class="session session-7 track-all"
-          style="grid-column: track-1-start / track-4-end; grid-row: time-1200 / time-1330;"
+          class="session break"
+          style="grid-column: track-1-start / track-1-end; grid-row: time-1605 / time-1640;"
         >
           <h3 class="session-title">Take a break!</h3>
         </div>
 
-        <h2 class="time-slot" style="grid-row: time-0800;">8:00am</h2>
-        <h2 class="time-slot" style="grid-row: time-0830;">8:30am</h2>
-        <h2 class="time-slot" style="grid-row: time-0900;">9:00am</h2>
         <h2 class="time-slot" style="grid-row: time-1000;">10:00am</h2>
         <h2 class="time-slot" style="grid-row: time-1030;">10:30am</h2>
         <h2 class="time-slot" style="grid-row: time-1100;">11:00am</h2>
-        <h2 class="time-slot" style="grid-row: time-1100;">11:30am</h2>
+        <h2 class="time-slot" style="grid-row: time-1130;">11:30am</h2>
         <h2 class="time-slot" style="grid-row: time-1200;">12:00pm</h2>
         <h2 class="time-slot" style="grid-row: time-1230;">12:30pm</h2>
         <h2 class="time-slot" style="grid-row: time-1300;">1:00pm</h2>
@@ -154,6 +174,8 @@ const schema = {
         <h2 class="time-slot" style="grid-row: time-1700;">5:00pm</h2>
         <h2 class="time-slot" style="grid-row: time-1730;">5:30pm</h2>
         <h2 class="time-slot" style="grid-row: time-1800;">6:00pm</h2>
+        <h2 class="time-slot" style="grid-row: time-1830;">6:30pm</h2>
+        <h2 class="time-slot" style="grid-row: time-1900;">7:00pm</h2>
       </div>
     </section>
   </main>
@@ -163,49 +185,132 @@ const schema = {
   /*************************
  * GRID SCHEDULE LAYOUT
  *************************/
-  @media screen and (min-width: 700px) {
-    .schedule {
-      display: grid;
-      grid-gap: 1em;
-      grid-template-rows:
-        [tracks] auto
-        [time-0800] 1fr
-        [time-0830] 1fr
-        [time-0900] 1fr
-        [time-0930] 1fr
-        [time-1000] 1fr
-        [time-1030] 1fr
-        [time-1100] 1fr
-        [time-1130] 1fr
-        [time-1200] 1fr
-        [time-1230] 1fr
-        [time-1300] 1fr
-        [time-1330] 1fr
-        [time-1400] 1fr
-        [time-1430] 1fr
-        [time-1500] 1fr
-        [time-1530] 1fr
-        [time-1600] 1fr
-        [time-1630] 1fr
-        [time-1700] 1fr
-        [time-1730] 1fr
-        [time-1800] 1fr;
+  .schedule {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-rows:
+      [tracks] auto
+      [time-1000] 1fr
+      [time-1005] 1fr
+      [time-1010] 1fr
+      [time-1015] 1fr
+      [time-1020] 1fr
+      [time-1025] 1fr
+      [time-1030] 1fr
+      [time-1035] 1fr
+      [time-1040] 1fr
+      [time-1045] 1fr
+      [time-1050] 1fr
+      [time-1055] 1fr
+      [time-1100] 1fr
+      [time-1105] 1fr
+      [time-1110] 1fr
+      [time-1115] 1fr
+      [time-1120] 1fr
+      [time-1125] 1fr
+      [time-1130] 1fr
+      [time-1135] 1fr
+      [time-1140] 1fr
+      [time-1145] 1fr
+      [time-1150] 1fr
+      [time-1155] 1fr
+      [time-1200] 1fr
+      [time-1205] 1fr
+      [time-1210] 1fr
+      [time-1215] 1fr
+      [time-1220] 1fr
+      [time-1225] 1fr
+      [time-1230] 1fr
+      [time-1235] 1fr
+      [time-1240] 1fr
+      [time-1245] 1fr
+      [time-1250] 1fr
+      [time-1255] 1fr
+      [time-1300] 1fr
+      [time-1305] 1fr
+      [time-1310] 1fr
+      [time-1315] 1fr
+      [time-1320] 1fr
+      [time-1325] 1fr
+      [time-1330] 1fr
+      [time-1335] 1fr
+      [time-1340] 1fr
+      [time-1345] 1fr
+      [time-1350] 1fr
+      [time-1355] 1fr
+      [time-1400] 1fr
+      [time-1405] 1fr
+      [time-1410] 1fr
+      [time-1415] 1fr
+      [time-1420] 1fr
+      [time-1425] 1fr
+      [time-1430] 1fr
+      [time-1435] 1fr
+      [time-1440] 1fr
+      [time-1445] 1fr
+      [time-1450] 1fr
+      [time-1455] 1fr
+      [time-1500] 1fr
+      [time-1505] 1fr
+      [time-1510] 1fr
+      [time-1515] 1fr
+      [time-1520] 1fr
+      [time-1525] 1fr
+      [time-1530] 1fr
+      [time-1535] 1fr
+      [time-1540] 1fr
+      [time-1545] 1fr
+      [time-1550] 1fr
+      [time-1555] 1fr
+      [time-1600] 1fr
+      [time-1605] 1fr
+      [time-1610] 1fr
+      [time-1615] 1fr
+      [time-1620] 1fr
+      [time-1625] 1fr
+      [time-1630] 1fr
+      [time-1635] 1fr
+      [time-1640] 1fr
+      [time-1645] 1fr
+      [time-1650] 1fr
+      [time-1655] 1fr
+      [time-1700] 1fr
+      [time-1705] 1fr
+      [time-1710] 1fr
+      [time-1715] 1fr
+      [time-1720] 1fr
+      [time-1725] 1fr
+      [time-1730] 1fr
+      [time-1735] 1fr
+      [time-1740] 1fr
+      [time-1745] 1fr
+      [time-1750] 1fr
+      [time-1755] 1fr
+      [time-1800] 1fr
+      [time-1805] 1fr
+      [time-1810] 1fr
+      [time-1815] 1fr
+      [time-1820] 1fr
+      [time-1825] 1fr
+      [time-1830] 1fr
+      [time-1835] 1fr
+      [time-1840] 1fr
+      [time-1845] 1fr
+      [time-1850] 1fr
+      [time-1855] 1fr
+      [time-1900] 1fr;
 
-      /* Note 1:
+    /* Note 1:
             Use 24hr time for gridline names for simplicity
 
             Note 2: Use "auto" instead of "1fr" for a more compact schedule where height of a slot is not proportional to the session length. Implementing a "compact" shortcode attribute might make sense for this!
             Try 0.5fr for more compact equal rows. I don't quite understand how that works :)
             */
 
-      grid-template-columns:
-        [times] 4em
-        [track-1-start] 1fr
-        [track-1-end track-2-start] 1fr
-        [track-2-end track-3-start] 1fr
-        [track-3-end track-4-start] 1fr
-        [track-4-end];
-    }
+    grid-template-columns:
+      [times] 4em
+      [track-1-start] 1fr
+      [track-1-end];
   }
 
   .time-slot {
@@ -222,8 +327,8 @@ const schema = {
         display: block;
         padding: 10px 5px 5px;
         position: sticky;
-        top: 0;
-        z-index: 1000;
+        top: 0px;
+        z-index: 1;
         color: white;
       }
     }
@@ -304,7 +409,7 @@ const schema = {
     color: #fff;
   }
 
-  .track-all {
+  .break {
     display: flex;
     justify-content: center;
     align-items: center;
