--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,24 +1,46 @@
 ---
-import {NAVIGATION_LINKS, SITE_TITLE, CFP_LINK} from "../consts";
+import { NAVIGATION_LINKS, SITE_TITLE, CFP_LINK } from "../consts";
 ---
+
 <header class="sticky top-0 z-10">
-    <div class="navbar bg-base-100 px-6">
-        <div class="flex-none">
-            <label for="my-drawer" class="btn btn-square btn-ghost md:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-            </label>
-        </div>
-        <div class="flex-1 items-center">
-            <img src="/ng-baguette-light-logo.svg" class="w-16 h-16" alt="EventEdge">
-            <a class="btn btn-ghost text-2xl" href="/">{SITE_TITLE}</a>
-        </div>
-        <div class="flex-none">
-            <nav aria-label="main navigation">
-                <ul class="menu menu-horizontal px-1 hidden md:flex">
-                    {NAVIGATION_LINKS.map(link => <li><a href={link.href}>{link.title}</a></li>)}
-                </ul>
-            </nav>
-            <a class="btn btn-primary" href={CFP_LINK} target="_blank">Register</a>
-        </div>
+  <div class="navbar bg-base-100 px-6">
+    <div class="flex-none">
+      <label for="my-drawer" class="btn btn-square btn-ghost lg:hidden">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          class="inline-block w-5 h-5 stroke-current"
+          ><path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M4 6h16M4 12h16M4 18h16"></path></svg
+        >
+      </label>
     </div>
+    <div class="flex-1 items-center">
+      <img
+        src="/ng-baguette-light-logo.svg"
+        class="w-16 h-16"
+        alt="EventEdge"
+      />
+      <a class="btn btn-ghost text-2xl" href="/">{SITE_TITLE}</a>
+    </div>
+    <div class="flex-none">
+      <nav aria-label="main navigation">
+        <ul class="menu menu-horizontal px-1 hidden lg:flex items-baseline">
+          {
+            NAVIGATION_LINKS.map((link) => (
+              <li>
+                <a href={link.href}>{link.title}</a>
+              </li>
+            ))
+          }
+          <a class="btn btn-primary" href={CFP_LINK} target="_blank">Register</a
+          >
+        </ul>
+      </nav>
+    </div>
+  </div>
 </header>
