feat: ui update

--- a/src/pages/agenda.astro
+++ b/src/pages/agenda.astro
@@ -97,19 +97,8 @@ const schema = {
   <main>
     <HeaderHero>
       <span slot="title">Agenda</span>
-      <span slot="description">
-        Join us for an exciting and informative Angular technical event where
-        industry experts and enthusiasts come together to share knowledge,
-        network, and explore the latest trends and advancements in Angular
-        development. Whether you're a seasoned developer or just starting out,
-        this event offers something for everyone. Dive into a series of engaging
-        sessions, hands-on workshops, and insightful panel discussions designed
-        to enhance your skills and inspire your next project. Don't miss this
-        opportunity to connect with the Angular community and take your
-        development expertise to the next level.
-      </span>
     </HeaderHero>
-
+    <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
     <ul
       class="timeline timeline-snap-icon max-md:timeline-compact timeline-vertical"
     >
@@ -148,6 +137,7 @@ const schema = {
         ))
       }
     </ul>
+    </section>
   </main>
 </Layout>
 
