--- a/src/pages/cfp.astro
+++ b/src/pages/cfp.astro
@@ -51,9 +51,8 @@ const schema = {
     <main>
         <HeaderHero>
             <span slot="title">Call For Papers</span>
-            <span slot="description">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</span>
             <span slot="actions">
-                <button class="btn btn-primary">Submit your talks</button>
+                <button class="btn">Submit your talks</button>
             </span>
         </HeaderHero>
 
