--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -31,14 +31,12 @@ const schema = {
     <main>
         <HeaderHero>
             <span slot="title">Sponsors</span>
-            <span slot="description">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</span>
         </HeaderHero>
 
         <section class="flex flex-col items-center max-w-screen-lg m-auto px-8">
-            <h2 class="text-3xl uppercase font-bold my-8">Premier</h2>
-            <h2 class="text-3xl uppercase font-bold my-8">Platinium</h2>
-            <h2 class="text-3xl uppercase font-bold my-8">Gold</h2>
-            <h2 class="text-3xl uppercase font-bold my-8">Silver</h2>
+            <h2 class="text-3xl text-center uppercase font-bold my-8">Host</h2>
+            <h2 class="text-3xl text-center uppercase font-bold my-8">Sponsors</h2>
+            <h2 class="text-3xl text-center uppercase font-bold my-8">Community Partners</h2>
         </section>
     </main>
 </Layout>
