--- a/src/components/HeaderHero.astro
+++ b/src/components/HeaderHero.astro
@@ -1,11 +1,11 @@
-<div class="hero" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
-    <div class="hero-overlay bg-opacity-60"></div>
-    <div class="hero-content text-center text-neutral-content">
+<div class="hero mb-8" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
+    <div class="hero-overlay bg-opacity-60 bg-primary"></div>
+    <div class="hero-content text-center text-neutral-content pt-12 pb-6">
         <div class="max-w-screen-lg">
-            <h1 class="mb-5 text-5xl font-bold">
+            <h1 class="text-5xl font-bold mb-6">
                 <slot name="title" />
             </h1>
-            <p class="mb-5">
+            <p>
                 <slot name="description" />
             </p>
             <slot name="actions" />
