--- a/src/pages/cfp.astro
+++ b/src/pages/cfp.astro
@@ -151,7 +151,7 @@ const schema = {
 
             <h2 class="text-4xl font-bold mt-8 mb-12">Formats</h2>
 
-            <article class="flex gap-8">
+            <article class="flex flex-col md:flex-row gap-8">
                 <Image class="rounded-xl" height={200} width={400} format="webp" src="https://images.unsplash.com/photo-1505373877841-8d25f7d46678?q=80&w=3000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
                 <div>
                     <h3 class="text-3xl font-bold">Conference (8 slots)</h3>
