--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,10 @@ import {SITE_TITLE} from "../consts";
 	<main>
 		<div class="hero min-h-screen">
 			<div class="hero-content text-center">
-				<div class="max-w-ld flex items-center">
+				<div class="max-w-ld flex flex-col-reverse md:flex-row items-center">
 					
 					<div class="flex flex-col flex-1 items-center">
-						<h1 class="text-5xl font-bold flex gap-4 uppercase items-start">
+						<h1 class="text-5xl font-bold flex flex-col md:flex-row gap-4 uppercase items-center md:items-start">
 							<span>NG Baguette</span>
 							<span>Conf 2025</span>
 						</h1>
@@ -51,7 +51,7 @@ import {SITE_TITLE} from "../consts";
   </div>
 </div>
 					</div>
-					<div class="flex-1">
+					<div class="flex-1 mb-8 md:mb-0">
 						<img class="w-full" src="/ng-baguette-logo.svg" alt="EventEdge">
 					</div>
 					
